# SpectroPy

./: .gitignore  README.md  pyproject.toml
examples/: config.py
examples/alter/: inverter_alter.py  inverter_altergroup.py
examples/basic/: diode_rectifier.py  inverter_dc_sweep.py  nmos_cs_xf.py  ota_dc.py  rc_low_pass_ac.py  rc_pz.py  rc_step_response.py
examples/corner/: inverter_corners.py
examples/design_files/freepdk45/: freepdk45_corners.scs
examples/design_files/veriloga_models/: rram_v_1_0_0.va
examples/montecarlo/: inverter_montecarlo.py  nmos_montecarlo.py
examples/sweep/: nmos_cs_sweep.py
examples/veriloga/: memristor_mlc.py
spectropy/: __init__.py
spectropy/netlisting/: __init__.py  circuit.py
spectropy/netlisting/components/: __init__.py  base.py  instance.py  passive.py  semiconductors.py  sources.py  switch.py
spectropy/netlisting/pwl_generator/: __init__.py  pwl_generator.py  waveforms.py
spectropy/simulator/: __init__.py  analyses.py  backends.py  base.py  collector.py  psf.py  results.py  session.py  simulations.py  statements.py
